# sso-tool

./: .pip-lic-ignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
sso/: __init__.py  getcreds.py  version.py
sso/cli/: __init__.py  sso.py  wrapper.py
